# AI-Scientist

./: README.md  pyproject.toml
