[tool.poetry]
name = "llm-glass"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
openai = "1.42.0"
aider-chat = "^0.56.0"
anthropic = "^0.34.2"
backoff = "^2.2.1"
numpy = "1.26.4"
matplotlib = "^3.9.2"
pypdf = "^4.3.1"
pymupdf4llm = "^0.0.14"
torch = "^2.4.1"
transformers = "^4.44.2"
datasets = "^3.0.0"
tiktoken = "^0.7.0"
wandb = "^0.18.0"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
